RIS/antlr/sparql/SparqlParser.java
// Generated from SparqlParser.g4 by ANTLR 4.4
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SparqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PREFIX=3, SILENT=49, SHA256=96, BINDINGS=60, GRAPH=21, CONTAINS=77, STRENDS=79, 
		LCASE=75, SHA512=98, PNAME_LN=117, REGEX=35, NOW=91, COUNT=104, CONSTRUCT=7, 
		DAY=85, SEPARATOR=114, NOT=111, STRLEN=73, MONTH=84, CLEAR=40, STRDT=102, 
		ISLITERAL=34, CREATE=45, GREATER=160, INSERT=47, USING=48, IRIREF=115, 
		NOT_EQUAL=139, BIND=62, LESS=159, QUESTION_MARK=154, LANGMATCHES=27, DOUBLE=124, 
		BASE=2, COMMENT=135, OPEN_CURLY_BRACE=145, SELECT=4, CLOSE_CURLY_BRACE=146, 
		INTO=54, TZ=90, DOUBLE_POSITIVE=127, DIVIDE=157, BOUND=29, ISIRI=31, COALESCE=99, 
		A=24, ASC=15, CONCAT=72, STRSTARTS=78, BLANK_NODE_LABEL=118, LOAD=39, 
		ASK=9, SEMICOLON=149, DELETE=46, STRBEFORE=80, FLOOR=70, ISBLANK=33, CLOSE_SQUARE_BRACKET=148, 
		URI=65, UCASE=74, ABS=68, INVERSE=142, GROUP=57, WS=1, SERVICE=61, INTEGER_POSITIVE=125, 
		NAMED=11, STRUUID=93, OR=141, STRING_LITERAL2=132, STRING_LITERAL1=131, 
		DESCRIBE=8, FILTER=23, ROUND=71, DATATYPE=28, LESS_EQUAL=137, DOUBLE_NEGATIVE=130, 
		FROM=10, FALSE=38, DISTINCT=5, LANG=26, WHERE=12, YEAR=83, UUID=92, ORDER=13, 
		TIMEZONE=89, LIMIT=17, BNODE=66, MAX=107, SECONDS=88, STRAFTER=81, AND=140, 
		SUM=105, ASTERISK=153, ENCODE_FOR_URI=76, IF=100, ISURI=32, STR=25, AS=56, 
		SAMPLE=109, SAMETERM=30, IN=112, MD5=94, COMMA=155, SUBSTR=36, OFFSET=18, 
		MINUS_SIGN=152, AVG=108, COPY=44, RAND=67, REPLACE=82, IRI=64, EQUAL=158, 
		DECIMAL_POSITIVE=126, ALL=51, GROUP_CONCAT=110, PIPE=161, EXISTS=113, 
		UNDEF=59, DOT=150, STRLANG=101, WITH=53, ADD=42, INTEGER=122, BY=14, ISNUMERIC=103, 
		TO=55, PLUS_SIGN=151, OPEN_SQUARE_BRACKET=147, REDUCED=6, INTEGER_NEGATIVE=128, 
		DEFAULT=50, VALUES=19, PNAME_NS=116, REFERENCE=136, HAVING=58, CLOSE_BRACE=144, 
		MIN=106, MINUS=63, SHA1=95, TRUE=37, UNION=22, OPTIONAL=20, MINUTES=87, 
		ANY=162, NEGATION=156, STRING_LITERAL_LONG2=134, DECIMAL=123, VAR1=119, 
		DROP=41, STRING_LITERAL_LONG1=133, VAR2=120, MOVE=43, DECIMAL_NEGATIVE=129, 
		CEIL=69, DESC=16, OPEN_BRACE=143, SHA384=97, GREATER_EQUAL=138, DATA=52, 
		HOURS=86, LANGTAG=121;
	public static final String[] tokenNames = {
		"<INVALID>", "WS", "BASE", "PREFIX", "SELECT", "DISTINCT", "REDUCED", 
		"CONSTRUCT", "DESCRIBE", "ASK", "FROM", "NAMED", "WHERE", "ORDER", "BY", 
		"ASC", "DESC", "LIMIT", "OFFSET", "VALUES", "OPTIONAL", "GRAPH", "UNION", 
		"FILTER", "'a'", "STR", "LANG", "LANGMATCHES", "DATATYPE", "BOUND", "SAMETERM", 
		"ISIRI", "ISURI", "ISBLANK", "ISLITERAL", "REGEX", "SUBSTR", "TRUE", "FALSE", 
		"LOAD", "CLEAR", "DROP", "ADD", "MOVE", "COPY", "CREATE", "DELETE", "INSERT", 
		"USING", "SILENT", "DEFAULT", "ALL", "DATA", "WITH", "INTO", "TO", "AS", 
		"GROUP", "HAVING", "UNDEF", "BINDINGS", "SERVICE", "BIND", "MINUS", "IRI", 
		"URI", "BNODE", "RAND", "ABS", "CEIL", "FLOOR", "ROUND", "CONCAT", "STRLEN", 
		"UCASE", "LCASE", "ENCODE_FOR_URI", "CONTAINS", "STRSTARTS", "STRENDS", 
		"STRBEFORE", "STRAFTER", "REPLACE", "YEAR", "MONTH", "DAY", "HOURS", "MINUTES", 
		"SECONDS", "TIMEZONE", "TZ", "NOW", "UUID", "STRUUID", "MD5", "SHA1", 
		"SHA256", "SHA384", "SHA512", "COALESCE", "IF", "STRLANG", "STRDT", "ISNUMERIC", 
		"COUNT", "SUM", "MIN", "MAX", "AVG", "SAMPLE", "GROUP_CONCAT", "NOT", 
		"IN", "EXISTS", "SEPARATOR", "IRIREF", "PNAME_NS", "PNAME_LN", "BLANK_NODE_LABEL", 
		"VAR1", "VAR2", "LANGTAG", "INTEGER", "DECIMAL", "DOUBLE", "INTEGER_POSITIVE", 
		"DECIMAL_POSITIVE", "DOUBLE_POSITIVE", "INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", 
		"DOUBLE_NEGATIVE", "STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", 
		"STRING_LITERAL_LONG2", "COMMENT", "'^^'", "'<='", "'>='", "'!='", "'&&'", 
		"'||'", "'^'", "'('", "')'", "'{'", "'}'", "'['", "']'", "';'", "'.'", 
		"'+'", "'-'", "'*'", "'?'", "','", "'!'", "'/'", "'='", "'<'", "'>'", 
		"'|'", "ANY"
	};
	public static final int
		RULE_query = 0, RULE_prologue = 1, RULE_baseDecl = 2, RULE_prefixDecl = 3, 
		RULE_selectQuery = 4, RULE_subSelect = 5, RULE_selectClause = 6, RULE_selectVariables = 7, 
		RULE_constructQuery = 8, RULE_describeQuery = 9, RULE_askQuery = 10, RULE_datasetClause = 11, 
		RULE_whereClause = 12, RULE_solutionModifier = 13, RULE_groupClause = 14, 
		RULE_groupCondition = 15, RULE_havingClause = 16, RULE_havingCondition = 17, 
		RULE_orderClause = 18, RULE_orderCondition = 19, RULE_limitOffsetClauses = 20, 
		RULE_limitClause = 21, RULE_offsetClause = 22, RULE_valuesClause = 23, 
		RULE_updateCommand = 24, RULE_update = 25, RULE_load = 26, RULE_clear = 27, 
		RULE_drop = 28, RULE_create = 29, RULE_add = 30, RULE_move = 31, RULE_copy = 32, 
		RULE_insertData = 33, RULE_deleteData = 34, RULE_deleteWhere = 35, RULE_modify = 36, 
		RULE_deleteClause = 37, RULE_insertClause = 38, RULE_usingClause = 39, 
		RULE_graphOrDefault = 40, RULE_graphRef = 41, RULE_graphRefAll = 42, RULE_quadPattern = 43, 
		RULE_quadData = 44, RULE_quads = 45, RULE_quadsDetails = 46, RULE_quadsNotTriples = 47, 
		RULE_triplesTemplate = 48, RULE_groupGraphPattern = 49, RULE_groupGraphPatternSub = 50, 
		RULE_groupGraphPatternSubList = 51, RULE_triplesBlock = 52, RULE_graphPatternNotTriples = 53, 
		RULE_optionalGraphPattern = 54, RULE_graphGraphPattern = 55, RULE_serviceGraphPattern = 56, 
		RULE_bind = 57, RULE_inlineData = 58, RULE_dataBlock = 59, RULE_inlineDataOneVar = 60, 
		RULE_inlineDataFull = 61, RULE_dataBlockValues = 62, RULE_dataBlockValue = 63, 
		RULE_minusGraphPattern = 64, RULE_groupOrUnionGraphPattern = 65, RULE_filter = 66, 
		RULE_constraint = 67, RULE_functionCall = 68, RULE_argList = 69, RULE_expressionList = 70, 
		RULE_constructTemplate = 71, RULE_constructTriples = 72, RULE_triplesSameSubject = 73, 
		RULE_propertyList = 74, RULE_propertyListNotEmpty = 75, RULE_verb = 76, 
		RULE_objectList = 77, RULE_object = 78, RULE_triplesSameSubjectPath = 79, 
		RULE_propertyListPath = 80, RULE_propertyListPathNotEmpty = 81, RULE_propertyListPathNotEmptyList = 82, 
		RULE_verbPath = 83, RULE_verbSimple = 84, RULE_objectListPath = 85, RULE_objectPath = 86, 
		RULE_path = 87, RULE_pathAlternative = 88, RULE_pathSequence = 89, RULE_pathElt = 90, 
		RULE_pathEltOrInverse = 91, RULE_pathMod = 92, RULE_pathPrimary = 93, 
		RULE_pathNegatedPropertySet = 94, RULE_pathOneInPropertySet = 95, RULE_integer = 96, 
		RULE_triplesNode = 97, RULE_blankNodePropertyList = 98, RULE_triplesNodePath = 99, 
		RULE_blankNodePropertyListPath = 100, RULE_collection = 101, RULE_collectionPath = 102, 
		RULE_graphNode = 103, RULE_graphNodePath = 104, RULE_varOrTerm = 105, 
		RULE_varOrIRI = 106, RULE_var = 107, RULE_graphTerm = 108, RULE_nil = 109, 
		RULE_expression = 110, RULE_unaryLiteralExpression = 111, RULE_unaryExpression = 112, 
		RULE_primaryExpression = 113, RULE_builtInCall = 114, RULE_regexExpression = 115, 
		RULE_subStringExpression = 116, RULE_strReplaceExpression = 117, RULE_existsFunction = 118, 
		RULE_notExistsFunction = 119, RULE_aggregate = 120, RULE_iriRefOrFunction = 121, 
		RULE_rdfLiteral = 122, RULE_numericLiteral = 123, RULE_numericLiteralUnsigned = 124, 
		RULE_numericLiteralPositive = 125, RULE_numericLiteralNegative = 126, 
		RULE_booleanLiteral = 127, RULE_string = 128, RULE_iri = 129, RULE_prefixedName = 130, 
		RULE_blankNode = 131, RULE_anon = 132;
	public static final String[] ruleNames = {
		"query", "prologue", "baseDecl", "prefixDecl", "selectQuery", "subSelect", 
		"selectClause", "selectVariables", "constructQuery", "describeQuery", 
		"askQuery", "datasetClause", "whereClause", "solutionModifier", "groupClause", 
		"groupCondition", "havingClause", "havingCondition", "orderClause", "orderCondition", 
		"limitOffsetClauses", "limitClause", "offsetClause", "valuesClause", "updateCommand", 
		"update", "load", "clear", "drop", "create", "add", "move", "copy", "insertData", 
		"deleteData", "deleteWhere", "modify", "deleteClause", "insertClause", 
		"usingClause", "graphOrDefault", "graphRef", "graphRefAll", "quadPattern", 
		"quadData", "quads", "quadsDetails", "quadsNotTriples", "triplesTemplate", 
		"groupGraphPattern", "groupGraphPatternSub", "groupGraphPatternSubList", 
		"triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", "graphGraphPattern", 
		"serviceGraphPattern", "bind", "inlineData", "dataBlock", "inlineDataOneVar", 
		"inlineDataFull", "dataBlockValues", "dataBlockValue", "minusGraphPattern", 
		"groupOrUnionGraphPattern", "filter", "constraint", "functionCall", "argList", 
		"expressionList", "constructTemplate", "constructTriples", "triplesSameSubject", 
		"propertyList", "propertyListNotEmpty", "verb", "objectList", "object", 
		"triplesSameSubjectPath", "propertyListPath", "propertyListPathNotEmpty", 
		"propertyListPathNotEmptyList", "verbPath", "verbSimple", "objectListPath", 
		"objectPath", "path", "pathAlternative", "pathSequence", "pathElt", "pathEltOrInverse", 
		"pathMod", "pathPrimary", "pathNegatedPropertySet", "pathOneInPropertySet", 
		"integer", "triplesNode", "blankNodePropertyList", "triplesNodePath", 
		"blankNodePropertyListPath", "collection", "collectionPath", "graphNode", 
		"graphNodePath", "varOrTerm", "varOrIRI", "var", "graphTerm", "nil", "expression", 
		"unaryLiteralExpression", "unaryExpression", "primaryExpression", "builtInCall", 
		"regexExpression", "subStringExpression", "strReplaceExpression", "existsFunction", 
		"notExistsFunction", "aggregate", "iriRefOrFunction", "rdfLiteral", "numericLiteral", 
		"numericLiteralUnsigned", "numericLiteralPositive", "numericLiteralNegative", 
		"booleanLiteral", "string", "iri", "prefixedName", "blankNode", "anon"
	};

	@Override
	public String getGrammarFileName() { return "SparqlParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SparqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class QueryContext extends ParserRuleContext {
		public AskQueryContext askQuery() {
			return getRuleContext(AskQueryContext.class,0);
		}
		public TerminalNode EOF() { return getToken(SparqlParser.EOF, 0); }
		public DescribeQueryContext describeQuery() {
			return getRuleContext(DescribeQueryContext.class,0);
		}
		public PrologueContext prologue() {
			return getRuleContext(PrologueContext.class,0);
		}
		public ValuesClauseContext valuesClause() {
			return getRuleContext(ValuesClauseContext.class,0);
		}
		public UpdateCommandContext updateCommand() {
			return getRuleContext(UpdateCommandContext.class,0);
		}
		public ConstructQueryContext constructQuery() {
			return getRuleContext(ConstructQueryContext.class,0);
		}
		public SelectQueryContext selectQuery() {
			return getRuleContext(SelectQueryContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).exitQuery(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_query);
		try {
			setState(280);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(266); prologue();
				setState(271);
				switch (_input.LA(1)) {
				case SELECT:
					{
					setState(267); selectQuery();
					}
					break;
				case CONSTRUCT:
					{
					setState(268); constructQuery();
					}
					break;
				case DESCRIBE:
					{
					setState(269); describeQuery();
					}
					break;
				case ASK:
					{
					setState(270); askQuery();
					}
					break;
				case EOF:
				case VALUES:
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(273); valuesClause();
				setState(274); match(EOF);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(277);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(276); updateCommand();
					}
					break;
				}
				setState(279); match(EOF);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrologueContext extends ParserRuleContext {
		public List<BaseDeclContext> baseDecl() {
			return getRuleContexts(BaseDeclContext.class);
		}
		public PrefixDeclContext prefixDecl(int i) {
			return getRuleContext(PrefixDeclContext.class,i);
		}
		public BaseDeclContext baseDecl(int i) {
			return getRuleContext(BaseDeclContext.class,i);
		}
		public List<PrefixDeclContext> prefixDecl() {
			return getRuleContexts(PrefixDeclContext.class);
		}
		public PrologueContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prologue; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).enterPrologue(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).exitPrologue(this);
		}
	}

	public final PrologueContext prologue() throws RecognitionException {
		PrologueContext _localctx = new PrologueContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_prologue);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(286);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==BASE || _la==PREFIX) {
				{
				setState(284);
				switch (_input.LA(1)) {
				case BASE:
					{
					setState(282); baseDecl();
					}
					break;
				case PREFIX:
					{
					setState(283); prefixDecl();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(288);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BaseDeclContext extends ParserRuleContext {
		public TerminalNode BASE() { return getToken(SparqlParser.BASE, 0); }
		public TerminalNode IRIREF() { return getToken(SparqlParser.IRIREF, 0); }
		public BaseDeclContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_baseDecl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).enterBaseDecl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SparqlParserListener ) ((SparqlParserListener)listener).exitBaseDecl(this);
		}
	}

	public final BaseDeclContext baseDecl() throws RecognitionException {
		BaseDeclContext _localctx = new BaseDeclContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_baseDecl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(289); match(BASE);
			setState(290); match(IRIREF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
